--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "promo-card-generator",
-  "version": "1.0.0",
-  "description": "A tool to generate promotional cards for artists.",
+  "version": "2.0.0",
+  "description": "A modern, feature-rich tool to generate professional promotional cards for artists with advanced customization options.",
   "main": "index.html",
   "scripts": {
     "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
     "watch:css": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "serve": "live-server dist --port=3000 --open",
     "dev": "concurrently \"npm run watch:css\" \"npm run serve\"",
-    "build": "npm run build:css"
+    "build": "npm run build:css",
+    "netlify:dev": "netlify dev",
+    "netlify:build": "npm run build",
+    "netlify:deploy": "npm run build && netlify deploy",
+    "netlify:deploy:prod": "npm run build && netlify deploy --prod"
   },
   "keywords": [
     "promo",
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.2",
+    "netlify-cli": "^17.10.1"
   }
 }
